# bluetti_monitor

./: .gitignore  CHANGELOG.md  README.rst  setup.cfg
.github/workflows/: release.yml
bluetti_monitor/: bus.py  device_handler.py  discovery_cli.py  logger_cli.py  monitor_service.py  server_cli.py
bluetti_monitor/bluetooth/: __init__.py  client.py  manager.py
