[metadata]
name = bluetti_monitor
version = 0.15.0
url = https://github.com/Rex2002/bluetti_monitor
description = Monitor for Bluetti power stations
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages = find:
zip_safe = false
install_requires =
    asyncio-mqtt
    bleak
    crcmod

[options.entry_points]
console_scripts =
    bluetti-discovery = bluetti_monitor.discovery_cli:main
    bluetti-logger = bluetti_monitor.logger_cli:main
    bluetti-monitor = bluetti_monitor.server_cli:main